2011-04-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/pts_rotmat.m: v1.0.0

	- PTS_ROTMAT Compute rotation matrix to minimize least squares
	error.

	* PointsToolbox/pts_procrustes.m: v1.0.0

	- PTS_PROCRUSTES Least-Squares Fit Orthogonal Procrustes Analysis
	between two sets of points.

	* PointsToolbox/pts_procrustes_gen.m: v1.0.0

	- PTS_PROCRUSTES_GEN Generalized Least-Squares Fit Orthogonal
	Procrustes Analysis.

	* PointsToolbox/pts_cn.m: v1.0.0

	- PTS_CN Center and normalize a set of points.

	* PointsToolbox/pts_simil_map.m: v1.0.0

	- PTS_SIMIL_MAP Apply similarity transformation to points.

	* PointsToolbox/pts_simil_map_params.m: v1.0.0

	- PTS_SIMIL_MAP_PARAMS Compute similarity transformation
	parameters between sets of points with unknown
	correspondence (Procrustes is used).

2011-04-13  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/pts_pca.m: v1.1.0

	- Don't chop off small eigenvalues. First, because depending on
	the scaling of the data, a small eigenvalue may actually be
	significant. Second, because small or negative eigenvalues may
	indicate interesting features in the data. Third, because it's
	easy to remove them afterwards if they are creating numerical
	errors in some application.

	* PointsToolbox/coords_from_dist_gower.m: v0.2.0

	- Add collinearity test.

	* Add PointsToolbox/iscollinear.m: v0.1.0

	- ISCOLLINEAR Test to determine whether a set of points are
	collinear.

2011-04-12  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/dmatrix_complete: v0.1.0

	- DMATRIX_COMPLETE Fill in empty elements of non-Euclidean
	distance matrix.

	* PointsToolbox/dmatrix2coords.m: v0.1.0

	- DMATRIX2COORDS Point coordinates from distance matrix.

	* PointsToolbox/plot_dmatrix.m: v0.1.1

	- Plot vertices as disconnected dots, so that their connections
	don't get confused with distance matrix connetions.

2011-04-11  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
